# AUTOMATED-VEHICLE-SYSTEM-POWERED-BY-SOLAR-ENERGY

./: git_shortcuts.txt  mav.parm  mav.tlog  mav.tlog.raw
config/: slam_async.yaml
src/lidar_tests/: package.xml  setup.cfg  setup.py
src/lidar_tests/lidar_tests/: Lidar.py
src/my_bot/: CMakeLists.txt  frames_2026-01-27_19.12.48.gv  package.xml  setup.py
src/my_bot/config/: nav2_params.yaml
src/my_bot/launch/: bringup_localization.launch.py  bringup_my_map.launch.py  bringup_nav2.launch.py  real_robot.launch.py  simulation.launch.py  simulation_nav2.launch.py
src/my_bot/maps/: my_map.yaml
src/my_bot/my_bot/: camera_node.py  lidar_node.py  navigation_node.py  robot_controller.py
src/my_bot/urdf/: robot.urdf
src/my_bot/worlds/: city_street.world
src/my_bot2/: package.xml  setup.cfg  setup.py
src/my_bot2/config/: nav2_params.yaml  nav2_params_bad.yaml  slam_params.yaml
src/my_bot2/launch/: bringup_localization_nav2.launch.py  bringup_slam_nav2.launch.py
src/my_bot2/maps/: my_map.pgm
src/my_bot2/rviz/: slam_nav2.rviz
src/my_bot2/urdf/: robot.urdf
src/my_bot2/worlds/: city_street.world
src/rover_brain/: package.xml  setup.cfg  setup.py
src/rover_brain/launch/: real_rover.launch.py
src/rover_brain/rover_brain/: commander.py  lidar_relay.py
